basic file arrangeed

--- a/index.html
+++ b/index.html
@@ -17,29 +17,35 @@
     </header>
     <main>
         <section class="container pt-4">
-            <div class="row py-4">
+            <div class="row py-4 gx-5">
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                     <img class="calc-img img-fluid rounded" src="images/dark-calc.jpg" alt="">
                 </div>
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
-                    <h4 class="px-5">Income</h4>
-                    <input type="number" name="" id="">
-                    <h4>Expenses</h4>
-                    <input type="number" name="" id="">
-                    <br>
-                    <input type="number" name="" id="">
-                    <br>
-                    <input type="number" name="" id="">
-                    <br>
-                    <button class="btn btn-success fw-bold px-3">Calculate</button>
-                    <h4>Total Expenses: $<span>5500</span></h4>
-                    <h4>Balance: $<span>4500</span></h4>
-                    <h4 class="d-inline">Save:</h4>
-                    <input type="number">
-                    <span>%</span>
-                    <button class="btn btn-success fw-bold px-3 col-sm ms-2">Save</button>
-                    <h4>Saving Amount: $<span>2000</span></h4>
-                    <h4>Remaining Balance: $<span>2500</span></h4>
+                    <div>
+                        <h4 class="ps-5  ms-5">Income</h4>
+                        <span>Income:</span>
+                        <input class="mb-3" type="number" name="" id="">
+                        <h4 class="ps-5  ms-5">Expenses</h4>
+                        <span>Food:</span>
+                        <input class="mb-3" type="number" name="" id="">
+                        <br>
+                        <span>Rent:</span>
+                        <input class="mb-3" type="number" name="" id="">
+                        <br>
+                        <span>Clothes:</span>
+                        <input class="mb-3" type="number" name="" id="">
+                        <br>
+                        <button class="btn btn-success fw-bold px-3 mb-3 gx-3">Calculate</button>
+                        <h4 class="">Total Expenses: $<span>5500</span></h4>
+                        <h4 class="mb-3">Balance: $<span>4500</span></h4>
+                        <h4 class="d-inline">Save:</h4>
+                        <input class="mb-3" type="number">
+                        <span>%</span>
+                        <button class="btn btn-success fw-bold px-3 col-sm ms-2">Save</button>
+                        <h4>Saving Amount: $<span>2000</span></h4>
+                        <h4>Remaining Balance: $<span>2500</span></h4>
+                    </div>
 
                 </div>
 
