--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
 
 <body>
     <header>
-        <h1 class="text-center mt-4 fw-bold text-success">Monthly Settlement</h1>
+        <h1 class="text-center mt-4 pt-2 fw-bold text-success">Monthly Settlement</h1>
     </header>
     <main>
-        <section class="container pt-4">
-            <div class="row py-4 gx-5">
+        <section class="container pt-4 mt-4">
+            <div class="row gx-5">
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                     <img class="calc-img img-fluid rounded" src="images/dark-calc.jpg" alt="">
                 </div>
-                <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
-                    <div>
-                        <h4 class="ps-5  ms-5">Income</h4>
+                <div class="col-12 col-sm-12 col-lg-6 col-xl-6 ps-lg-4 calc-area">
+                    <div class="">
+                        <h5 class="ps-5  ms-5">Income</h5>
                         <span>Income:</span>
-                        <input class="mb-3" type="number" name="" id="">
-                        <h4 class="ps-5  ms-5">Expenses</h4>
+                        <input class="mb-3 rounded" type="number" name="" id="">
+                        <h5 class="ps-5  ms-5">Expenses</h5>
                         <span>Food:</span>
-                        <input class="mb-3" type="number" name="" id="">
+                        <input class="mb-3 rounded" type="number" name="" id="">
                         <br>
                         <span>Rent:</span>
-                        <input class="mb-3" type="number" name="" id="">
+                        <input class="mb-3 rounded" type="number" name="" id="">
                         <br>
                         <span>Clothes:</span>
-                        <input class="mb-3" type="number" name="" id="">
+                        <input class="mb-3  rounded" type="number" name="" id="">
                         <br>
-                        <button class="btn btn-success fw-bold px-3 mb-3 gx-3">Calculate</button>
+                        <button class="calculate-btn btn btn-success fw-bold px-3 mb-4 ms-6">Calculate</button>
                         <h4 class="">Total Expenses: $<span>5500</span></h4>
                         <h4 class="mb-3">Balance: $<span>4500</span></h4>
                         <h4 class="d-inline">Save:</h4>
-                        <input class="mb-3" type="number">
+                        <input class="mb-3  rounded" type="number">
                         <span>%</span>
                         <button class="btn btn-success fw-bold px-3 col-sm ms-2">Save</button>
                         <h4>Saving Amount: $<span>2000</span></h4>
