--- a/index.html
+++ b/index.html
@@ -12,49 +12,87 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <h1 class="text-center mt-4 pt-2 fw-bold text-success">Monthly Settlement</h1>
     </header>
+
+    <!-- main -->
     <main>
         <section class="container pt-4 mt-4">
-            <div class="row gx-5">
+            <div class="row g-lg-4">
+                <!-- first column  -->
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                     <img class="calc-img img-fluid rounded" src="images/dark-calc.jpg" alt="">
                 </div>
+                <!-- calculation column -->
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6 ps-lg-4 calc-area">
-                    <div class="">
-                        <h5 class="ps-5  ms-5">Income</h5>
-                        <span>Income:</span>
-                        <input class="mb-3 rounded" type="number" name="" id="">
+                    <div class="row g-3 align-items-center mb-3">
+                        <!-- income start  -->
+                        <h5 class="ps-5 ms-5">Income</h5>
+                        <div class="col-auto">
+                            <label class="col-form-label">Income:</label>
+                        </div>
+                        <div class="col-auto">
+                            <input type="number" id="inputPassword6" class="form-control"
+                                aria-describedby="passwordHelpInline">
+                        </div>
+                    </div>
+                    <!-- Expenses start  -->
+                    <!-- 1 -->
+                    <div class="row g-3 align-items-center mb-3">
                         <h5 class="ps-5  ms-5">Expenses</h5>
-                        <span>Food:</span>
-                        <input class="mb-3 rounded" type="number" name="" id="">
-                        <br>
-                        <span>Rent:</span>
-                        <input class="mb-3 rounded" type="number" name="" id="">
-                        <br>
-                        <span>Clothes:</span>
-                        <input class="mb-3  rounded" type="number" name="" id="">
-                        <br>
-                        <button class="calculate-btn btn btn-success fw-bold px-3 mb-4 ms-6">Calculate</button>
-                        <h4 class="">Total Expenses: $<span>5500</span></h4>
-                        <h4 class="mb-3">Balance: $<span>4500</span></h4>
-                        <h4 class="d-inline">Save:</h4>
-                        <input class="mb-3  rounded" type="number">
-                        <span>%</span>
-                        <button class="btn btn-success fw-bold px-3 col-sm ms-2">Save</button>
-                        <h4>Saving Amount: $<span>2000</span></h4>
+                        <div class="col-auto">
+                            <label class="col-form-label">Food:</label>
+                        </div>
+                        <div class="col-auto">
+                            <input type="number" id="" class="form-control">
+                        </div>
+                    </div>
+                    <!-- 2 -->
+                    <div class="row g-3 align-items-center mb-3">
+                        <div class="col-auto">
+                            <label for="inputPassword6" class="col-form-label">Rent:</label>
+                        </div>
+                        <div class="col-auto">
+                            <input type="number" id="" class="form-control">
+                        </div>
+                    </div>
+                    <!-- 3 -->
+                    <div class="row g-3 align-items-center mb-3">
+                        <div class="col-auto">
+                            <label for="inputPassword6" class="col-form-label">Cloths:</label>
+                        </div>
+                        <div class="col-auto">
+                            <input type="number" id="" class="form-control">
+                        </div>
+                    </div>
+                    <!-- calculate button  -->
+                    <button type="submit" class="calculate-btn btn btn-primary mb-4">Calculate</button>
+                    <h4 class="">Total Expenses: $<span>5500</span></h4>
+                    <h4 class="mb-4">Balance: $<span>4500</span></h4>
+
+                    <!-- saving section start  -->
+                    <div class="row g-3 align-items-center mb-3">
+                        <div class="col-auto">
+                            <label class="col-form-label">Save:</label>
+                        </div>
+
+                        <div class="col-auto">
+                            <input type="number" class="form-control">
+                        </div>
+                        <div class="col-auto">
+                            <span>% </span>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                        <h4 class="mt-4">Saving Amount: $<span>2000</span></h4>
                         <h4>Remaining Balance: $<span>2500</span></h4>
+
                     </div>
 
                 </div>
 
             </div>
-
-
-
-
-
         </section>
     </main>
     <script src="js/script.js"></script>
