--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- main -->
     <main>
         <section class="container pt-4 mt-4">
-            <div class="row g-lg-4">
+            <div class="row g-lg-4 d-flex justify-content-between">
                 <!-- first column  -->
                 <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                     <img class="calc-img img-fluid rounded" src="images/dark-calc.jpg" alt="">
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <button id="calc-btn" type="submit" class="calculate-btn btn btn-primary mb-4">Calculate</button>
-                    <h4 class="">Total Expenses: $<span id="total-cost">5500</span></h4>
-                    <h4 class="mb-4">Balance: $<span id="current-balance">4500</span></h4>
+                    <h4 class="">Total Expenses: $<span id="total-cost">0</span></h4>
+                    <h4 class="mb-4">Balance: $<span id="current-balance">0</span></h4>
 
                     <!-- saving section start  -->
                     <div class="row g-3 align-items-center mb-3">
@@ -73,14 +73,14 @@
                             <label class="col-form-label">Save:</label>
                         </div>
                         <div class="col-auto">
-                            <input type="number" class="form-control">
+                            <input id="saving-field" type="number" class="form-control">
                         </div>
                         <div class="col-auto">
                             <span>% </span>
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button id="saving-btn" type="submit" class="btn btn-primary">Save</button>
                         </div>
-                        <h4 class="mt-4">Saving Amount: $<span>2000</span></h4>
-                        <h4>Remaining Balance: $<span>2500</span></h4>
+                        <h4 class="mt-4">Saving Amount: $<span id="saved-amount">0</span></h4>
+                        <h4>Remaining Balance: $<span id="remaining-balance">0</span></h4>
                     </div>
                 </div>
             </div>
