--- a/index.html
+++ b/index.html
@@ -7,89 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Settlement</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <!-- header -->
-    <header>
-        <h1 class="text-center mt-4 pt-2 fw-bold text-success">Monthly Settlement</h1>
-    </header>
+    <header class="container-lg">
+        <h1 class="text-center text-success mt-4 fw-bold">Monthly Settlement</h1>
+        <!-- section start -->
+        <section class="row mt-4 gx-5 gy-3">
 
-    <!-- main -->
-    <main>
-        <section class="container pt-4 mt-4">
-            <div class="row g-lg-4 d-flex justify-content-between">
-                <!-- first column  -->
-                <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
-                    <img class="calc-img img-fluid rounded" src="images/dark-calc.jpg" alt="">
-                </div>
-                <!-- calculation column -->
-                <div class="col-12 col-sm-12 col-lg-6 col-xl-6 ps-lg-4 calc-area">
-                    <div class="row g-3 align-items-center mb-3">
-                        <!-- income start  -->
-                        <h5 class="ps-5 ms-5">Income</h5>
-                        <div class="col-auto">
-                            <label class="col-form-label">Income:</label>
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" id="income-field" class="form-control">
-                        </div>
-                    </div>
-                    <!-- Expenses start  -->
-                    <div class="row g-3 align-items-center mb-3">
-                        <h5 class="ps-5  ms-5">Expenses</h5>
-                        <div class="col-auto">
-                            <label class="col-form-label">Food:</label>
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" id="food-cost" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row g-3 align-items-center mb-3">
-                        <div class="col-auto">
-                            <label class="col-form-label">Rent:</label>
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" id="rent-cost" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row g-3 align-items-center mb-3">
-                        <div class="col-auto">
-                            <label class="col-form-label">Cloths:</label>
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" id="cloth-cost" class="form-control">
-                        </div>
-                    </div>
-                    <button id="calc-btn" type="submit" class="calculate-btn btn btn-primary mb-4">Calculate</button>
-                    <h4 class="">Total Expenses: $<span id="total-cost">0</span></h4>
-                    <h4 class="mb-4">Balance: $<span id="current-balance">0</span></h4>
-
-                    <!-- saving section start  -->
-                    <div class="row g-3 align-items-center mb-3">
-                        <div class="col-auto">
-                            <label class="col-form-label">Save:</label>
-                        </div>
-                        <div class="col-auto">
-                            <input id="saving-field" type="number" class="form-control">
-                        </div>
-                        <div class="col-auto">
-                            <span>% </span>
-                            <button id="saving-btn" type="submit" class="btn btn-primary">Save</button>
-                        </div>
-                        <h4 class="mt-4">Saving Amount: $<span id="saved-amount">0</span></h4>
-                        <h4>Remaining Balance: $<span id="remaining-balance">0</span></h4>
-                    </div>
+            <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
+                <div class="card">
+                    <img class="body-image rounded" src="Images/dark-calc.jpg" alt="">
                 </div>
             </div>
+
+            <div class="col-lg-6 col-xl-6 col-sm-12 col-12">
+                <div class="calc-area card d-flex justify-content-center align-items-center py-5">
+                    <h3>Income</h3>
+                    <label>Income: <input class="rounded mb-4 form-control" id="income-field" type="number"></label>
+
+                    <h3>Expenses</h3>
+                    <label>Food: <input class="rounded mb-2 form-control" id="food-cost" type="number"></label>
+                    <label>Rent: <input class="rounded mb-2 form-control" id="rent-cost" type="number">
+                    </label>
+                    <label>Clothes: <input class="rounded mb-3 form-control" id="cloth-cost" type="number"></label>
+                    <button class="border-0 rounded bg-primary text-white p-2 fw-bold" id="calc-btn">Calculate</button>
+                    <br>
+
+                    <h4>Total Expenses $<span id="total-cost">0</span></h4>
+                    <h4>Balance $<span id="current-balance">0</span></h4>
+                    <label>Save: <input class="save-field rounded mt-3" id="saving-field" type="number"> %
+                        <button class="border-0 p-2 rounded fw-bold bg-primary text-white" id="saving-btn">Save</button>
+                        </p>
+                        <h4>Saving Amount: $<span id="saved-amount">0</span></h4>
+                        <h4>Remaining Balance: $<span id="remaining-balance">0</span></h4>
+                </div>
+            </div>
+
         </section>
-    </main>
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <!-- section end -->
+    </header>
+
+    <!-- Java Script file -->
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
